[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jonathan Pallant <github@thejpster.org.uk>",
    "Jorge Aparicio <jorge@japaric.io>",
    "Sébastien Béchet <sebastien.bechet@osinix.com>",
]

description = "A heap allocator for embedded systems"
repository = "https://github.com/rust-embedded/embedded-alloc"
documentation = "https://docs.rs/embedded-alloc"
readme = "README.md"
edition = "2018"

keywords = [
    "allocator",
    "embedded",
    "arm",
    "riscv",
    "cortex-m",
]
license = "MIT OR Apache-2.0"
name = "embedded-alloc"
version = "0.6.0"

[features]
allocator_api = []

[dependencies]
critical-section = "1.0"

[dependencies.linked_list_allocator]
default-features = false
version = "0.10.5"

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
